hphp/test/zend/good/ext/gd/tests/imagestringup_error3.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagestringup($image, 'string', 5, 5, 'String', 1);

?>