hphp/test/zend/bad/ext/gd/tests/imagestringup_error7.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagestringup($image, 1, 5, 5, 'String', 'font');

?>